objects/Exception_Logger__c/Exception_Logger__c.object-meta.xml
<CustomObject>
    <label>Exception Logger</label>
    <nameField>
        <displayFormat>EXP-{00000}</displayFormat>
        <label>Exception Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>