objects/Exception_Logger__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>