objects/Exception_Logger__c/fields/Exception_Cause_Override__c.field-meta.xml
<CustomField>
    <fullName>Exception_Cause_Override__c</fullName>
    <label>Exception Cause Override</label>
    <type>TextArea</type>
</CustomField>