objects/Exception_Logger__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>